--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,122 @@
 /*Stylesheet for Interactive Calculator*/
+.top {
+  position: absolute;
+  border-style: solid;
+  height: 60px;
+  width: 324.5px;
+  float:left;
+  margin-left: 300px;
+  margin-top: 39px;
+  background-color: #9b9590;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  border-bottom: none;
+  box-shadow: 3px 3px;
+}
+
+#screen {
+  background-color: #eceae9;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: clip;
+  display: inline-block;
+  border-style: solid;
+  height: 35px;
+  width: 310px;
+  margin-left: 5px;
+  margin-top: 10px;
+  vertical-align: top;
+  border-radius: 5px;
+  text-align: right;
+  font-size: 25px;
+  font-family: sans-serif;
+  box-shadow: inset 1px 1px;
+}
+
+
+.left {
+  position: absolute;
+  border-style: solid;
+  height: 290px;
+  width: 190px;
+  margin-top: 100px;
+  margin-left: 300px;
+  background-color: #9b9590;
+  border-bottom-left-radius: 8px;
+  border-right: none;
+  box-shadow: 3px 3px;
+}
+
+.digit {
+  text-align: center;
+  font-size: 30px;
+  background-color: #eceae9;
+  display: inline-block;
+  border-style: solid;
+  height: 50px;
+  width: 50px;
+  margin-left: 5px;
+  margin-top: 10px;
+  vertical-align: top;
+  border-radius: 5px;
+  box-shadow: 3px 3px;
+}
+
+.digit:hover {
+  background-color: #c1bebc;
+}
+
+.zero {
+  width: 114px;
+}
+
+.right {
+  position:absolute;
+  border-style: solid;
+  height:290px;
+  width:135px;
+  margin-left: 491px;
+  margin-top: 100px;
+  background-color: #9b9590;
+  border-bottom-right-radius: 8px;
+  border-left: none;
+  box-shadow: 3px 3px;
+}
+
+.funct {
+  font-size: 30px;
+  text-align: center;
+  background-color: #eceae9;
+  vertical-align: bottom;
+  display: inline-block;
+  border-style: solid;
+  height: 50px;
+  width: 50px;
+  margin-left: 7px;
+  margin-top: 10px;
+  border-radius: 5px;
+  box-shadow: 3px 3px;
+}
+
+.funct:hover {
+  background-color: #c1bebc;
+}
+
+.clear {
+  width: 114px;
+  background-color: #ff7272;
+}
+
+.clear:hover {
+  background-color: #ff2f2f;
+}
+
+
+.equal {
+  width: 114px;
+  background-color: #ff8100;
+}
+
+.equal:hover {
+  background-color: #d96d00;
+}
